--- a/src/main/webapp/WEB-INF/views/customer/edit.html
+++ b/src/main/webapp/WEB-INF/views/customer/edit.html
@@ -24,6 +24,14 @@
             <td><input type="text" th:field="*{lastName}"/></td>
         </tr>
         <tr>
+            <td>Province:</td>
+            <td>
+                <select th:field="*{province}">
+                    <option th:each="p : ${provinces}" th:value="${p.id}" th:text="${p.name}"></option>
+                </select>
+            </td>
+        </tr>
+        <tr>
             <td></td>
             <td><input type="submit" value="Update customer"></td>
         </tr>
